# schema-safe-bench

./: .env.example  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
configs/runs/: smoke.yaml  (+8 more)
data/: README.md
docs/: architecture.md  dataset-notes.md  evaluator-compatibility.md  experiment-protocol.md  failure-analysis.md  full-evaluation-freeze.md  hosted-generation.md  project-plan.md  reproducibility.md  research-integrity.md  results.md  safety-policy.md
results/: README.md  full-evaluation-readiness.json
scripts/: build_catalog.py  prepare_bird_minidev.py  run_smoke_test.py
tests/: conftest.py  test_asset_verification.py  test_b1_hosted_artifact.py  test_b1_policy_artifact.py  test_b2_hosted_artifact.py  test_b2_policy_artifact.py  test_b3_hosted_artifact.py  test_b3_policy_artifact.py  test_b4_hosted_artifact.py  test_b4_policy_artifact.py  test_b5_hosted_artifact.py  test_b5_policy_artifact.py  test_b6_hosted_artifact.py  test_b6_repair.py  test_b7_abstention.py  test_b7_hosted_artifact.py  test_catalog.py  test_datasets.py  test_embeddings.py  test_evaluation.py  test_evaluator_compatibility.py  test_execution.py  test_full_evaluation_freeze.py  test_generation.py  test_hosted_artifact.py  test_package.py  test_prepare_script.py  test_prompting.py  test_reranking.py  test_retrieval.py  test_run_comparison.py  test_runner.py  test_schema_evidence.py  test_validation.py
(+155 files in other folders)
